syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.codenotfound.grpc.helloworld";
option java_outer_classname = "HelloWorld";
option objc_class_prefix = "Grpc";

package com.codenotfound.grpc.helloworld;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
}
